Fixed spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,6 @@
 
 html,
 body {
-	max-width: 100%;
-	overflow-y: scroll;
 	overflow-x: hidden;
 }
 
